[gd_scene load_steps=3 format=3 uid="uid://bgv00dshrxgx4"]

[ext_resource type="Script" uid="uid://bu0widjaiew4n" path="res://script/menu.gd" id="1_8hxod"]
[ext_resource type="Texture2D" uid="uid://toe7j2osc535" path="res://gambar/background.png" id="2_bo06a"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -5.0
offset_right = -4.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8hxod")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0078125
anchor_top = -0.00771605
anchor_right = 1.11189
anchor_bottom = 1.19858
offset_right = 294.098
offset_bottom = 203.32
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.744707, 0.686234)
texture = ExtResource("2_bo06a")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -806.771
offset_top = -441.497
offset_right = 806.229
offset_bottom = -27.497
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "GAME KATAK "
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -93.0
offset_right = 151.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "START"

[node name="levels" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "LEVEL"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
